# ident_str

./: Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: check.yml  scheduled.yml  test.yml
examples/: simple.rs  test_cases.rs
src/: lib.rs
tests/: non_hash_ident.rs  tests_example.rs
