[package]
name = "ident-str"
description = "A macro to convert string literals into identifiers"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/funnyboy-roks/ident-str"
categories = ["rust-patterns", "development-tools"]
keywords = ["proc-macro"]
rust-version = "1.85"


 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ['cfg(rustc_nightly)'] }

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
macro-string = "0.1.4"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
quote = "1.0.42"
syn = "2.0.110"

[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }

[build-dependencies]
rustc_version = "0.4.1"
